--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -16,47 +16,27 @@
                                 Programming Across Borders: Ideas, Technologies,
                                 Innovations
                             </h4>
-                            <a
-                                class="bth-project"
-                                target="_blank"
-                                href="https://github.com/lapoonder/superiore"
-                                role="button"
-                                >See project</a
-                            >
+                            <a class="bth-project" target="_blank" href="https://github.com/lapoonder/superiore"
+                                role="button">See project</a>
                         </div>
                         <div class="project-pic">
                             <picture>
-                                <source
-                                    srcset="
+                                <source srcset="
                                         /img/image-1-desktop.webp    1x,
                                         /img/image-1-desktop-2x.webp 2x
-                                    "
-                                    media="(min-width: 1440px)"
-                                />
-                                <source
-                                    srcset="
+                                    " media="(min-width: 1440px)" />
+                                <source srcset="
                                         /img/image-1-desktop.webp    1x,
                                         /img/image-1-desktop-2x.webp 2x
-                                    "
-                                    media="(max-width: 767px)"
-                                />
-                                <source
-                                    srcset="
-                                        /img/image-1-desktop.webp    1x,
-                                        /img/image-1-desktop-2x.webp 2x
-                                    "
-                                    media="(min-width: 768px)"
-                                />
-                                <img
-                                    loading="lazy"
-                                    src="/img/img-1-1x.png"
-                                    srcset="
+                                    " media="(min-width: 768px) and (max-width: 1439px)" />
+                                <source srcset="
+                                        /img/img-1-1x.png    1x,
+                                        /img/img-1-2x.png 2x
+                                    " media="(max-width: 767px)" />
+                                <img loading="lazy" src="/img/img-1-1x.png" srcset="
                                         /img/img-1-1x.png 1x,
                                         /img/img-1-2x.png 2x
-                                    "
-                                    alt="Project one"
-                                    class="img-project"
-                                />
+                                    " alt="Project one" class="img-project" />
                             </picture>
                         </div>
                     </li>
@@ -72,40 +52,27 @@
                                 Programming Across Borders: Ideas, Technologies,
                                 Innovations
                             </h4>
-                            <a
-                                class="bth-project"
-                                target="_blank"
-                                href="https://github.com/lapoonder/superiore"
-                                role="button"
-                                >See project</a
-                            >
+                            <a class="bth-project" target="_blank" href="https://github.com/lapoonder/superiore"
+                                role="button">See project</a>
                         </div>
                         <div class="project-pic">
                             <picture>
-                                <source
-                                    srcset="
-                                        /img/image-2-desktop.webp    1x,
-                                        /img/image-2-desktop-2x.webp 2x
-                                    "
-                                    media="(min-width: 768px) and (max-width: 1024px)"
-                                />
-                                <source
-                                    srcset="
-                                        /img/image-2-desktop.webp    1x,
-                                        /img/image-2-desktop-2x.webp 2x
-                                    "
-                                    media="(min-width: 1440px)"
-                                />
-                                <img
-                                    loading="lazy"
-                                    src="/img/img-2-1x.png"
-                                    srcset="
-                                        /img/img-2-1x.png 1x,
-                                        /img/img-2-2x.png 2x
-                                    "
-                                    alt="Project two"
-                                    class="img-project"
-                                />
+                                <source srcset="
+                                    /img/image-2-desktop.webp    1x,
+                                    /img/image-2-desktop-2x.webp 2x
+                                " media="(min-width: 1440px)" />
+                                <source srcset="
+                                    /img/image-2-desktop.webp    1x,
+                                    /img/image-2-desktop-2x.webp 2x
+                                " media="(min-width: 768px) and (max-width: 1439px)" />
+                                <source srcset="
+                                    /img/img-2-1x.png 1x,
+                                    /img/img-2-2x.png 2x
+                                " media="(max-width: 767px)" />
+                                <img loading="lazy" src="/img/img-2-1x.png" srcset="
+                                    /img/img-2-1x.png 1x,
+                                    /img/img-2-2x.png 2x
+                                " alt="Project two" class="img-project" />
                             </picture>
                         </div>
                     </li>
@@ -121,40 +88,27 @@
                                 Programming Across Borders: Ideas, Technologies,
                                 Innovations
                             </h4>
-                            <a
-                                class="bth-project"
-                                target="_blank"
-                                href="https://github.com/lapoonder/superiore"
-                                role="button"
-                                >See project</a
-                            >
+                            <a class="bth-project" target="_blank" href="https://github.com/lapoonder/superiore"
+                                role="button">See project</a>
                         </div>
                         <div class="project-pic">
                             <picture>
-                                <source
-                                    srcset="
-                                        /img/image-3-desktop.webp    1x,
-                                        /img/image-3-desktop-2x.webp 2x
-                                    "
-                                    media="(min-width: 768px) and (max-width: 1024px)"
-                                />
-                                <source
-                                    srcset="
-                                        /img/image-3-desktop.webp    1x,
-                                        /img/image-3-desktop-2x.webp 2x
-                                    "
-                                    media="(min-width: 1440px)"
-                                />
-                                <img
-                                    loading="lazy"
-                                    src="/img/img-3-1x.png"
-                                    srcset="
-                                        /img/img-3-1x.png 1x,
-                                        /img/img-3-2x.png 2x
-                                    "
-                                    alt="Project three"
-                                    class="img-project"
-                                />
+                                <source srcset="
+                                    /img/image-3-desktop.webp    1x,
+                                    /img/image-3-desktop-2x.webp 2x
+                                " media="(min-width: 1440px)" />
+                                <source srcset="
+                                    /img/image-3-desktop.webp    1x,
+                                    /img/image-3-desktop-2x.webp 2x
+                                " media="(min-width: 768px) and (max-width: 1439px)" />
+                                <source srcset="
+                                    /img/img-3-1x.png 1x,
+                                    /img/img-3-2x.png 2x
+                                " media="(max-width: 767px)" />
+                                <img loading="lazy" src="/img/img-3-1x.png" srcset="
+                                    /img/img-3-1x.png 1x,
+                                    /img/img-3-2x.png 2x
+                                " alt="Project three" class="img-project" />
                             </picture>
                         </div>
                     </li>
