--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,3 +1,4 @@
+
 .about-me {
     padding: 0;
     margin-top: 60px;
@@ -65,6 +66,7 @@
 }
 
 /* accordion */
+
 
 .accordion-list {
     margin-top: 12px;
@@ -158,9 +160,10 @@
     padding-bottom: 20px;
 }
 
-.accordion-item.open .accordion-content {
+/* .accordion-item.open .accordion-content {
     display: block;
-}
+} */
+
 
 .accordion-about-text {
     margin-top: 32px;
