--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -5,12 +5,12 @@
             <ul class="swiper-wrapper cards"></ul>
         </div>
         <nav class="arrows">
-            <button class="swiper-button-prev">
+            <button class="swiper-button-prev" data-swiper-id="2">
                 <svg width="24" height="24" class="svg-left">
                     <use href="./img/sprite.svg#icon-arrow-narrow-left"></use>
                 </svg>
             </button>
-            <button class="swiper-button-next">
+            <button class="swiper-button-next" data-swiper-id="2">
                 <svg width="24" height="24" class="svg-right">
                     <use href="./img/sprite.svg#icon-arrow-narrow-right"></use>
                 </svg>
