--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -40,8 +40,24 @@
     </form>
     <div class="footer-contacts">
         <a href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a>
-        <a href="tel.+380111111111" class="footer-contact-phone"
+        <a href="tel:+380111111111" class="footer-contact-phone"
             >+380 11 111 11 11</a
         >
+    </div>
+    <div class="pop-up">
+        <div class="pop-up-content">
+            <button class="pop-up-close-btn" type="button">
+                <svg class="pop-up-close-icon" width="11" height="11">
+                    <use href="/img/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
+            <h3 class="pop-up-title">
+                Thank you for your interest in cooperation!
+            </h3>
+            <p class="pop-up-text">
+                The manager will contact you shortly to discuss further details
+                and opportunities for cooperation. Please stay in touch.
+            </p>
+        </div>
     </div>
 </footer>
