--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -43,10 +43,10 @@
             </div>
         </div>
         <div>
-            <ul class="accordion-list">
-                <li class="accordion-item open">
-                    <div class="accordion-header">
-                        <button class="accordion-toggle" aria-expanded="true">
+            <ul class="accordion-container accordion-list">
+                <li class="ac accordion-item open">
+                    <div class="ac-header accordion-header">
+                        <button class="ac-trigger about-accordion-toggle" type="button" aria-expanded="true">
                             <span class="accordion-title">About Me</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -70,8 +70,8 @@
                             </div>
                         </button>
                     </div>
-                    <div class="accordion-content">
-                        <div>
+                    <div class="ac-panel accordion-content">
+                        <div class="ac-text">
                             <p>
                                 I am Lloyd Jefferson, a talented programmer with
                                 extensive expertise in software development. I
@@ -84,7 +84,7 @@
                                 solve even the most difficult tasks encountered
                                 on the way.
                             </p>
-                            <p class="accordion-about-text">
+                            <p class=" accordion-about-text">
                                 Able to work both independently and in a team. I
                                 can effectively cooperate with colleagues,
                                 exchanging ideas and finding optimal solutions.
@@ -102,9 +102,9 @@
                         </div>
                     </div>
                 </li>
-                <li class="accordion-item open">
-                    <div class="accordion-header">
-                        <button class="accordion-toggle" aria-expanded="true">
+                <li class="ac accordion-item open">
+                    <div class="ac-header accordion-header">
+                        <button class="ac-trigger about-accordion-toggle" type="button" aria-expanded="true">
                             <span class="accordion-title"> Role </span>
                             <div class="about-svg-icon">
                                 <svg
@@ -128,17 +128,17 @@
                             </div>
                         </button>
                     </div>
-                    <div class="accordion-content">
-                        <ul class="accordion-role-list">
+                    <div class="ac-panel accordion-content">
+                        <ul class="ac-text accordion-role-list">
                             <li>Frontend development</li>
                             <li>HeadlessCMS, Wordpress</li>
                             <li>Blender (enjoy)</li>
                         </ul>
                     </div>
                 </li>
-                <li class="accordion-item open">
-                    <div class="accordion-header">
-                        <button class="accordion-toggle" aria-expanded="true">
+                <li class="ac accordion-item open">
+                    <div class="ac-header accordion-header">
+                        <button class="ac-trigger about-accordion-toggle" type="button" aria-expanded="true">
                             <span class="accordion-title">Education</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -162,8 +162,8 @@
                             </div>
                         </button>
                     </div>
-                    <div class="accordion-content">
-                        <ul class="accordion-role-list">
+                    <div class="ac-panel accordion-content">
+                        <ul class="ac-text accordion-role-list">
                             <li>
                                 2018 - 2019 / Frontend Development Diploma, GoIT
                                 IT School, New York
