--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,8 +1,8 @@
 <section id="faq" class="section">
     <div class="container">
         <h2 class="faq-title">FAQ</h2>
-        <ul class="accordion-container">
-            <li class="ac">
+        <ul class="accordion-container faq-accordion-container">
+            <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     What programming languages are most often used in your
                     project?
@@ -20,7 +20,7 @@
                     </button>
                 </h4>
                 <div class="ac-panel">
-                    <p class="ac-text">
+                    <p class="ac-text faq-ac-text">
                         In the field of web development, there are various
                         technologies and programming languages. Typically, this
                         includes a combination of frontend (client side) and
@@ -28,7 +28,7 @@
                     </p>
                 </div>
             </li>
-            <li class="ac">
+            <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     What are the deadlines for the project?
                     <button type="button" class="faq-btn">
@@ -45,14 +45,14 @@
                     </button>
                 </h4>
                 <div class="ac-panel">
-                    <p class="ac-text">
+                    <p class="ac-text faq-ac-text">
                         The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project,
                         its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually
                         occurs during the planning phase of the project.
                     </p>
                 </div>
             </li>
-            <li class="ac">
+            <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     What payment methods do you accept?
                     <button type="button" class="faq-btn">
@@ -69,13 +69,13 @@
                     </button>
                 </h4>
                 <div class="ac-panel">
-                    <p class="ac-text">
+                    <p class="ac-text faq-ac-text">
                         Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal,
                         as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
                     </p>
                 </div>
             </li>
-            <li class="ac">
+            <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     How can I contact you?
                     <button type="button" class="faq-btn">
@@ -92,13 +92,13 @@
                     </button>
                 </h4>
                 <div class="ac-panel">
-                    <p class="ac-text">
+                    <p class="ac-text faq-ac-text">
                         In the field of web development, there are various technologies and programming languages. Typically, this includes a
                         combination of frontend (client side) and backend (server side) languages.
                     </p>
                 </div>
             </li>
-            <li class="ac">
+            <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                     Do you provide advice or support?
                     <button type="button" class="faq-btn">
@@ -115,14 +115,14 @@
                     </button>
                 </h4>
                 <div class="ac-panel">
-                    <p class="ac-text">
+                    <p class="ac-text faq-ac-text">
                         The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project,
                         its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually
                         occurs during the planning phase of the project.
                     </p>
                 </div>
             </li>
-            <li class="ac">
+            <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
                         What does the process of developing a software product look like from idea to implementation?
                     <button type="button" class="faq-btn">
@@ -139,7 +139,7 @@
                     </button>
                 </h4>
                 <div class="ac-panel">
-                    <p class="ac-text">
+                    <p class="ac-text faq-ac-text">
                         Payment through credit and debit cards such as Visa,
                         MasterCard, specialized electronic payment systems such
                         as PayPal, as well as payments in cryptocurrencies such
