--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -328,7 +328,7 @@
             <li>
                 <img
                     loading="lazy"
-                    src="/img/project_img_5.jpg"
+                    src="/img/project-img-5.jpg"
                     alt="project image"
                 />
             </li>
