--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <section id="projects" class="projects-section">
+<section id="projects" class="section projects-section">
+    <div class="container">
         <h2 class="h2-project">Projects</h2>
         <div class="all-div">
             <div class="swiper-container">
@@ -127,5 +127,5 @@
                 </svg>
             </button>
         </nav>
-    </section>
-</div>
+    </div>
+</section>
