--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -44,9 +44,9 @@
         </div>
         <div>
             <ul class="accordion-container accordion-list">
-                <li class="ac accordion-item open">
+                <li class="ac accordion-item open is-active">
                     <div class="ac-header accordion-header">
-                        <button class="ac-trigger about-accordion-toggle" type="button" aria-expanded="true">
+                        <button class="ac-trigger about-accordion-toggle" aria-expanded="true">
                             <span class="accordion-title">About Me</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -55,7 +55,7 @@
                                     height="20"
                                 >
                                     <use
-                                        href="/img/sprite.svg#icon-arrow-up"
+                                        href="/img/sprite.svg#icon-arrow-down"
                                     ></use>
                                 </svg>
                                 <svg
@@ -64,7 +64,7 @@
                                     height="20"
                                 >
                                     <use
-                                        href="/img/sprite.svg#icon-arrow-down"
+                                        href="/img/sprite.svg#icon-arrow-up"
                                     ></use>
                                 </svg>
                             </div>
@@ -104,7 +104,7 @@
                 </li>
                 <li class="ac accordion-item open">
                     <div class="ac-header accordion-header">
-                        <button class="ac-trigger about-accordion-toggle" type="button" aria-expanded="true">
+                        <button class="ac-trigger about-accordion-toggle" aria-expanded="true">
                             <span class="accordion-title"> Role </span>
                             <div class="about-svg-icon">
                                 <svg
@@ -113,7 +113,7 @@
                                     height="20"
                                 >
                                     <use
-                                        href="/img/sprite.svg#icon-arrow-up"
+                                        href="/img/sprite.svg#icon-arrow-down"
                                     ></use>
                                 </svg>
                                 <svg
@@ -122,7 +122,7 @@
                                     height="20"
                                 >
                                     <use
-                                        href="/img/sprite.svg#icon-arrow-down"
+                                        href="/img/sprite.svg#icon-arrow-up"
                                     ></use>
                                 </svg>
                             </div>
@@ -138,7 +138,7 @@
                 </li>
                 <li class="ac accordion-item open">
                     <div class="ac-header accordion-header">
-                        <button class="ac-trigger about-accordion-toggle" type="button" aria-expanded="true">
+                        <button class="ac-trigger about-accordion-toggle" aria-expanded="true">
                             <span class="accordion-title">Education</span>
                             <div class="about-svg-icon">
                                 <svg
@@ -147,7 +147,7 @@
                                     height="20"
                                 >
                                     <use
-                                        href="/img/sprite.svg#icon-arrow-up"
+                                        href="/img/sprite.svg#icon-arrow-down"
                                     ></use>
                                 </svg>
                                 <svg
@@ -156,7 +156,7 @@
                                     height="20"
                                 >
                                     <use
-                                        href="/img/sprite.svg#icon-arrow-down"
+                                        href="/img/sprite.svg#icon-arrow-up"
                                     ></use>
                                 </svg>
                             </div>
@@ -230,3 +230,4 @@
         </div>
     </div>
 </section>
+ 
