--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -45,29 +45,28 @@
         <div>
             <ul class="accordion-container accordion-list">
                 <li class="ac accordion-item open is-active">
-                    <div class="ac-header accordion-header">
-                        <button class="ac-trigger about-accordion-toggle" aria-expanded="true">
-                            <span class="accordion-title">About Me</span>
-                            <div class="about-svg-icon">
-                                <svg
-                                    class="about-icon about-icon-up"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="/img/sprite.svg#icon-arrow-down"
-                                    ></use>
-                                </svg>
-                                <svg
-                                    class="about-icon about-icon-down"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="/img/sprite.svg#icon-arrow-up"
-                                    ></use>
-                                </svg>
-                            </div>
+                    <div class="ac-header ac-trigger accordion-header">
+                        <span class="accordion-title">About Me</span>
+                        <button
+                            class="about-accordion-toggle about-svg-icon"
+                            aria-expanded="true"
+                        >
+                            <svg
+                                class="about-icon about-icon-up"
+                                width="20"
+                                height="20"
+                            >
+                                <use href="/img/sprite.svg#icon-arrow-up"></use>
+                            </svg>
+                            <svg
+                                class="about-icon about-icon-down"
+                                width="20"
+                                height="20"
+                            >
+                                <use
+                                    href="/img/sprite.svg#icon-arrow-down"
+                                ></use>
+                            </svg>
                         </button>
                     </div>
                     <div class="ac-panel accordion-content">
@@ -84,7 +83,7 @@
                                 solve even the most difficult tasks encountered
                                 on the way.
                             </p>
-                            <p class=" accordion-about-text">
+                            <p class="accordion-about-text">
                                 Able to work both independently and in a team. I
                                 can effectively cooperate with colleagues,
                                 exchanging ideas and finding optimal solutions.
@@ -103,29 +102,28 @@
                     </div>
                 </li>
                 <li class="ac accordion-item open">
-                    <div class="ac-header accordion-header">
-                        <button class="ac-trigger about-accordion-toggle" aria-expanded="true">
-                            <span class="accordion-title"> Role </span>
-                            <div class="about-svg-icon">
-                                <svg
-                                    class="about-icon about-icon-up"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="/img/sprite.svg#icon-arrow-down"
-                                    ></use>
-                                </svg>
-                                <svg
-                                    class="about-icon about-icon-down"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="/img/sprite.svg#icon-arrow-up"
-                                    ></use>
-                                </svg>
-                            </div>
+                    <div class="ac-header ac-trigger accordion-header">
+                        <span class="accordion-title"> Role </span>
+                        <button
+                            class="about-accordion-toggle about-svg-icon"
+                            aria-expanded="true"
+                        >
+                            <svg
+                                class="about-icon about-icon-up"
+                                width="20"
+                                height="20"
+                            >
+                                <use href="/img/sprite.svg#icon-arrow-up"></use>
+                            </svg>
+                            <svg
+                                class="about-icon about-icon-down"
+                                width="20"
+                                height="20"
+                            >
+                                <use
+                                    href="/img/sprite.svg#icon-arrow-down"
+                                ></use>
+                            </svg>
                         </button>
                     </div>
                     <div class="ac-panel accordion-content">
@@ -137,29 +135,28 @@
                     </div>
                 </li>
                 <li class="ac accordion-item open">
-                    <div class="ac-header accordion-header">
-                        <button class="ac-trigger about-accordion-toggle" aria-expanded="true">
-                            <span class="accordion-title">Education</span>
-                            <div class="about-svg-icon">
-                                <svg
-                                    class="about-icon about-icon-up"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="/img/sprite.svg#icon-arrow-down"
-                                    ></use>
-                                </svg>
-                                <svg
-                                    class="about-icon about-icon-down"
-                                    width="20"
-                                    height="20"
-                                >
-                                    <use
-                                        href="/img/sprite.svg#icon-arrow-up"
-                                    ></use>
-                                </svg>
-                            </div>
+                    <div class="ac-header ac-trigger accordion-header">
+                        <span class="accordion-title">Education</span>
+                        <button
+                            class="about-accordion-toggle about-svg-icon"
+                            aria-expanded="true"
+                        >
+                            <svg
+                                class="about-icon about-icon-up"
+                                width="20"
+                                height="20"
+                            >
+                                <use href="/img/sprite.svg#icon-arrow-up"></use>
+                            </svg>
+                            <svg
+                                class="about-icon about-icon-down"
+                                width="20"
+                                height="20"
+                            >
+                                <use
+                                    href="/img/sprite.svg#icon-arrow-down"
+                                ></use>
+                            </svg>
                         </button>
                     </div>
                     <div class="ac-panel accordion-content">
@@ -230,4 +227,3 @@
         </div>
     </div>
 </section>
- 
