--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -46,9 +46,12 @@
                 </h4>
                 <div class="ac-panel">
                     <p class="ac-text faq-ac-text">
-                        The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project,
-                        its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually
-                        occurs during the planning phase of the project.
+                        The terms of project implementation depend to a large
+                        extent on a number of factors, such as the scope of the
+                        project, its complexity, and the availability of
+                        resources. Determining exact deadlines is a difficult
+                        task, and it usually occurs during the planning phase of
+                        the project.
                     </p>
                 </div>
             </li>
@@ -70,8 +73,10 @@
                 </h4>
                 <div class="ac-panel">
                     <p class="ac-text faq-ac-text">
-                        Payment through credit and debit cards such as Visa, MasterCard, specialized electronic payment systems such as PayPal,
-                        as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+                        Payment through credit and debit cards such as Visa,
+                        MasterCard, specialized electronic payment systems such
+                        as PayPal, as well as payments in cryptocurrencies such
+                        as Bitcoin, Ethereum and others.
                     </p>
                 </div>
             </li>
@@ -93,8 +98,10 @@
                 </h4>
                 <div class="ac-panel">
                     <p class="ac-text faq-ac-text">
-                        In the field of web development, there are various technologies and programming languages. Typically, this includes a
-                        combination of frontend (client side) and backend (server side) languages.
+                        In the field of web development, there are various
+                        technologies and programming languages. Typically, this
+                        includes a combination of frontend (client side) and
+                        backend (server side) languages.
                     </p>
                 </div>
             </li>
@@ -116,15 +123,19 @@
                 </h4>
                 <div class="ac-panel">
                     <p class="ac-text faq-ac-text">
-                        The terms of project implementation depend to a large extent on a number of factors, such as the scope of the project,
-                        its complexity, and the availability of resources. Determining exact deadlines is a difficult task, and it usually
-                        occurs during the planning phase of the project.
+                        The terms of project implementation depend to a large
+                        extent on a number of factors, such as the scope of the
+                        project, its complexity, and the availability of
+                        resources. Determining exact deadlines is a difficult
+                        task, and it usually occurs during the planning phase of
+                        the project.
                     </p>
                 </div>
             </li>
             <li class="ac faq-ac-item">
                 <h4 class="ac-header ac-trigger faq-ac-trigger h4-classes">
-                        What does the process of developing a software product look like from idea to implementation?
+                    What does the process of developing a software product look
+                    like from idea to implementation?
                     <button type="button" class="faq-btn">
                         <svg width="20" height="20" class="faq-arrow">
                             <use
