--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -45,7 +45,7 @@
         <div>
             <ul class="accordion-container accordion-list">
                 <li class="ac accordion-item open is-active">
-                    <div class="ac-header ac-trigger accordion-header">
+                    <h2 class="ac-header ac-trigger accordion-header">
                         <span class="accordion-title">About Me</span>
                         <button
                             class="about-accordion-toggle about-svg-icon"
@@ -68,7 +68,7 @@
                                 ></use>
                             </svg>
                         </button>
-                    </div>
+                    </h2>
                     <div class="ac-panel accordion-content">
                         <div class="ac-text">
                             <p>
@@ -102,7 +102,7 @@
                     </div>
                 </li>
                 <li class="ac accordion-item open">
-                    <div class="ac-header ac-trigger accordion-header">
+                    <h2 class="ac-header ac-trigger accordion-header">
                         <span class="accordion-title"> Role </span>
                         <button
                             class="about-accordion-toggle about-svg-icon"
@@ -125,7 +125,7 @@
                                 ></use>
                             </svg>
                         </button>
-                    </div>
+                    </h2>
                     <div class="ac-panel accordion-content">
                         <ul class="ac-text accordion-role-list">
                             <li>Frontend development</li>
@@ -135,7 +135,7 @@
                     </div>
                 </li>
                 <li class="ac accordion-item open">
-                    <div class="ac-header ac-trigger accordion-header">
+                    <h2 class="ac-header ac-trigger accordion-header">
                         <span class="accordion-title">Education</span>
                         <button
                             class="about-accordion-toggle about-svg-icon"
@@ -158,7 +158,7 @@
                                 ></use>
                             </svg>
                         </button>
-                    </div>
+                    </h2>
                     <div class="ac-panel accordion-content">
                         <ul class="ac-text accordion-role-list">
                             <li>
